Mostly done with CS1100 reqs

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,81 +1,67 @@
 {% extends "base.html" %}
 {% block body %}
-    <ul class="nav nav-pills nav-justified">
+    <ul class="nav nav-tabs nav-justified">
         <li role="presentation"><a href="/">Home</a></li>
         <li role="presentation"><a href="about">About</a></li>
         <li role="presentation" class="active"><a href="contact">Contact</a></li>
         <li role="presentation"><a href="resume">Resume/Sample Works</a></li>
     </ul>
-    <hr>
+    <br>
     <div class="row">
-        <div class="col-xs-6 col-md-3">
-            <a href="https://github.com/rushing3" class="thumbnail">
-                <img src="{{ url_for('static', filename='git.png') }}" width="256">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-3">
-            <a href="https://www.instagram.com/rush95/" class="thumbnail">
-                <img src="{{ url_for('static', filename='insta.png') }}" width="256">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-md-6" style="border-right-style:solid;border-right-color:#ffffff">
+            <h3> Contact me on LinkedIn </h3>
             <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
                 <img src="{{ url_for('static', filename='in.png') }}" width="256">
             </a>
+            <h3> ...Or fill out the message form on the right -> </h3>
         </div>
-        <div class="col-xs-6 col-md-3">
-            <a href="/resume" class="thumbnail">
-                <img src="{{ url_for('static', filename='resume.png') }}" width="256">
-            </a>
+        <div class="col-md-6">
+            <form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="form_name">Firstname *</label>
+                            <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="form_lastname">Lastname *</label>
+                            <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="form_email">Email *</label>
+                            <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="form_phone">Phone</label>
+                            <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="form_message">Message *</label>
+                            <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <input type="submit" class="btn btn-success btn-send" value="Send message">
+                    </div>
+                </div>
+            </form>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <form>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="form_name">Firstname *</label>
-                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-                        <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="form_lastname">Lastname *</label>
-                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
-                        <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="form_email">Email *</label>
-                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-                        <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="form_phone">Phone</label>
-                        <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
-                        <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="form_message">Message *</label>
-                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                        <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <input type="submit" class="btn btn-success btn-send" value="Send message">
-                </div>
-            </div>
-        </form>
     </div>
 {% endblock %}
