--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
-    <ul class="nav nav-pills nav-justified">
-        <li role="presentation" class="active"><a href="/">Home</a></li>
-        <li role="presentation"><a href="about">About</a></li>
-        <li role="presentation"><a href="contact">Contact</a></li>
-        <li role="presentation"><a href="resume">Resume/Sample Works</a></li>
+    <ul class="nav nav-tabs nav-justified">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="resume">Resume/Sample Works</a></li>
     </ul>
-    <hr>
+    <br>
     <div class="row">
         <div class="col-xs-6">
                 <img src="{{ url_for('static', filename='alex256.jpg') }}" height="266">
@@ -37,7 +37,8 @@
     <hr>
     <p>
     Hey there, my name is Alex and welcome to my site.
-    I'm currently a Computer Science student at Georgia Tech.
+    I'm currently a Computer Science student at Georgia Tech, and I will be 
+    interning as a Software Development Engineer for Amazon this Summer in Seattle.
     In my free time I enjoy attending hackathons, snowboarding,
     hiking, travelling to new places, and eating good food.
     </p>
