--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,215 +1,156 @@
-/*
- * Globals
- */
+html,
+body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Amatic SC', sans-serif;
+}
 
-/* Links */
-a,
-a:focus,
-a:hover {
+.title {
+    display: table-cell;
+    position: fixed;
+    z-index: 2;
+    text-align: left;
+    vertical-align: top;
+    color: white;
+    margin: 0 10px;
+}
+
+/* Align Text */
+.text-vertical {
+    display: table-row;
+    text-align: center;
+    vertical-align: bottom;
     color: white;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-    color: #333;
-    text-shadow: none; /* Prevent inheritence from `body` */
-    background-color: #fff;
-    border: 1px solid #fff;
-}
-
-
-/*
- *  * Base structure
- *   */
-
-html,
-body {
-    height: 100%;
-    background-color: rgb(88,91,86);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-body {
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-
-.img-responsive {
-    max-width: 300px;
-    max-height: 400px;
-    float: center;
-}
-
-/* -----------------------
- * Layout styles
- * ------------------------*/
-
-.container
-{
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: transparent;
-    width: 800px;
-    height: 500px;
-}
-
-.header
-{
-    color: #fff;
-    background: #999;
-    padding: 1em 1.25em;
-}
-
-.header-heading { margin: 0; }
-
-.nav-bar
-{
-    background: #000;
+.text-vertical h1 {
+    font-size: 4.5em;
+    font-weight: 700;
+    margin: 0;
     padding: 0;
 }
 
-.footer
-{
-    background-color: black;
-    padding: 1em 1.25em;
+/* Align Text */
+.text-vertical-center {
+    display: table-cell;
+    text-align: center;
+    vertical-align: bottom;
+    color: white;
 }
 
+.text-vertical-center h1 {
+    font-size: 4.5em;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+}
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
+/* Custom Buttons */
+.btn-dark {
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    background-color: rgba(40, 40, 40, .0);
+    transition: color 1s, font-size 1s;
+}
+
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active {
+    font-size: 20pt;
+    color: rgba(40, 60, 40, 1);
+}
+
+.btn-menu {
+    font-size: 22pt;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    background-color: rgba(100, 120, 100, 0);
+}
+
+.btn-menu:hover,
+.btn-menu:focus,
+.btn-menu:active {
+    color: #fff;
+    font-weight: bold;
+}
+
+.btn-red {
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    background-color: rgba(191, 87, 68, .6);
+}
+
+.btn-red:hover,
+.btn-red:focus,
+.btn-red:active {
+    color: #fff;
+    background-color: rgba(191, 87, 68, .9);
+}
+
+.btn-light {
+    color: #333;
+    border: none;
+    border-radius: 0;
+    background-color: rgb(255, 255, 255);
+}
+
+.btn-light:hover,
+.btn-light:focus,
+.btn-light:active {
+    color: #333;
+    background-color: rgba(255, 255, 255, .8);
+}
+
+.menu-buttons {
+    display: table-header-group;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    text-align: right;
+    margin: 5px 5px 0 0;
+    /*border-bottom: 1px solid white;*/
+}
+
+/* Header */
+.header {
+    position: relative;
     display: table;
     width: 100%;
-    height: 100%; /* For at least Firefox */
-    min-height: 100%;
-    /*-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-    box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
-}
-.site-wrapper-inner {
-    display: table-cell;
-    vertical-align: top;
-}
-.cover-container {
-    margin-right: auto;
-    margin-left: auto;
+    height: 100%;
+    background: url(../r-z.jpg) no-repeat center center scroll;
+    background-size: cover;
 }
 
-/* Padding for spacing */
-.inner {
-    padding: 30px;
-}
-
-
-/*
- *  * Header
- *   */
-.masthead-brand {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-    display: inline-block;
-}
-.masthead-nav > li + li {
-    margin-left: 20px;
-}
-.masthead-nav > li > a {
-    padding-right: 0;
-    padding-left: 0;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff; /* IE8 proofing */
-    color: rgba(255,255,255,.75);
-    border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-    background-color: transparent;
-    border-bottom-color: #a9a9a9;
-    border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
+/* Plane */
+.plane {
+    width: 100%;
+    height: 70px;
     color: #fff;
-    border-bottom-color: #fff;
+    background: black;
+    background-size: cover;
+    z-index: 1;
 }
 
-@media (min-width: 768px) {
-    .masthead-brand {
-        float: left;
-    }
-    .masthead-nav {
-        float: left;
-    }
+/* Footer */
+footer {
+    padding: 100px 0;
 }
 
-
-/*
- *  * Cover
- *   */
-
-.cover {
-    padding: 0 20px;
-}
-.cover .btn-lg {
-    padding: 10px 20px;
-    font-weight: bold;
+#to-top {
+    font-size: 1em;
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    display: none;
+    padding: 15px 20px;
 }
 
-
-/*
- *  * Footer
- *   */
-
-
-/*
- *  * Affix and center
- *   */
-
-@media (min-width: 768px) {
-    /* Pull out the header and footer */
-    .masthead {
-        position: fixed;
-        top: 0;
-    }
-    .mastfoot {
-        position: fixed;
-        bottom: 0;
-    }
-    /* Start the vertical centering */
-    .site-wrapper-inner {
-        vertical-align: middle;
-    }
-    /* Handle the widths */
-    .masthead,
-    .cover-container {
-        width: 100%; /* Must be percentage or pixels for horizontal alignment */
-        margin: 0 auto;
-        overflow: hidden;
-        position: relative;
-    }
-    .mastfoot {
-        width: 100%; /* Must be percentage or pixels for horizontal alignment */
-        margin: 0 auto;
-        overflow: hidden;
-        position: fixed;
-    }
-}
-
-@media (min-width: 992px) {
-    .masthead,
-    .mastfoot,
-    .cover-container {
-        width: 700px;
-    }
+/* Sticky */
+.sticky {
+    position: sticky;
+    top: 0px;
 }
