--- a/static/css/base.css
+++ b/static/css/base.css
@@ -127,26 +127,28 @@ body {
 
 /* Plane */
 .plane {
+    position: fixed;
+    display: none;
     width: 100%;
     height: 70px;
     color: #fff;
-    background: black;
+    background: rgba(0, 0, 0, .8);
     background-size: cover;
     z-index: 1;
+}
+
+/* Filler */
+.filler {
+    width: 100%;
+    height: 100px;
+    color: #fff;
+    background: white;
+    background-size: cover;
 }
 
 /* Footer */
 footer {
     padding: 100px 0;
-}
-
-#to-top {
-    font-size: 1em;
-    position: fixed;
-    right: 5px;
-    bottom: 5px;
-    display: none;
-    padding: 15px 20px;
 }
 
 /* Sticky */
