--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,7 +28,7 @@ body {
 }
 
 .text-vertical h1 {
-    font-size: 4.5em;
+    font-size: 48px;
     font-weight: 700;
     margin: 0;
     padding: 0;
@@ -43,7 +43,7 @@ body {
 }
 
 .text-vertical-center h1 {
-    font-size: 4.5em;
+    font-size: 68px;
     font-weight: 700;
     margin: 0;
     padding: 0;
@@ -61,12 +61,12 @@ body {
 .btn-dark:hover,
 .btn-dark:focus,
 .btn-dark:active {
-    font-size: 20pt;
+    font-size: 20px;
     color: rgba(40, 60, 40, 1);
 }
 
 .btn-menu {
-    font-size: 22pt;
+    font-size: 18px;
     color: #fff;
     border: none;
     border-radius: 0;
@@ -134,7 +134,7 @@ body {
     position: fixed;
     display: none;
     width: 100%;
-    height: 70px;
+    height: 55px;
     color: #fff;
     background: rgba(0, 0, 0, .8);
     background-size: cover;
