--- a/static/css/base.css
+++ b/static/css/base.css
@@ -125,7 +125,7 @@ body {
     display: table;
     width: 100%;
     height: 100%;
-    background: url(../r-z.jpg) no-repeat center center scroll;
+    background: url(../img/r-z.jpg) no-repeat center center scroll;
     background-size: cover;
 }
 
